--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,8 +1,8 @@
 h1{
-  text-align: center;
   color: #f8a1d8;
   font-size: 50px;
 }
 p{
-  text-align: center;
+  text-indent: 20px;
+  margin-left: 10px;
 }
