--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -7,7 +7,7 @@ p{
   margin-left: 10px;
 }
 #somethin{
-  background-color: #00C2D1;
+  background-color: #AEE4FF;
   padding: 10px;
   margin: 10px;
   border: dashed 1px;
