--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -5,10 +5,14 @@ h1{
 p{
   text-indent: 20px;
   margin-left: 10px;
+  font-style: arial;
 }
 #somethin{
   background-color: #AEE4FF;
   padding: 10px;
   margin: 10px;
   border: dashed 1px;
+  min-height: 300 px;
+  width: 500x;
+
 }
