--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -5,7 +5,7 @@ h1{
 p{
   text-indent: 20px;
   margin-left: 10px;
-  font-style: arial;
+  font-family: "arial";
 }
 #somethin{
   background-color: #AEE4FF;
