--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,12 @@
+h1{
+  font-family: "arial";
+  font-size: 40px;
+  text-align: center;
+}
 p{
   font-family: "arial";
   font-size: 20px;
+  text-align: center;
 }
 a{
   font-family: "arial";
