--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,11 @@ h1{
   font-size: 40px;
   text-align: center;
 }
+#sloth{
+  font-family: "arial";
+  font-size: 20px;
+  text-align: center;
+}
 p{
   font-family: "arial";
   font-size: 20px;
