--- a/css/site.css
+++ b/css/site.css
@@ -2,24 +2,33 @@ h1{
   font-family: "arial";
   font-size: 40px;
   text-align: center;
+  color: #ADACB5;
+}
+h2{
+  font-family: "arial";
+  font-size: 30px;
+  text-align: center;
+  color: #ADACB5;
 }
 #sloth{
   font-family: "arial";
   font-size: 20px;
-  text-align: center;
+  color: #ADACB5;
 }
-p{
+p, pre{
   font-family: "arial";
   font-size: 20px;
-  text-align: center;
+  color: #ADACB5;
 }
 a{
   font-family: "arial";
   font-size: 20px;
+  color: #ADACB5;
 }
 li{
   font-family: "arial";
   font-size: 20px;
+  color: #ADACB5;
 }
 a:visited {
   color: grey;
@@ -28,6 +37,6 @@ img{
   width: 200px;
   height: auto;
 }
-background{
-  color: #a9a9a9;
+body{
+  background-color: #000000;
 }
