--- a/lab13/css/lab.css
+++ b/lab13/css/lab.css
@@ -2,3 +2,15 @@
   font-family: arial;
   color: #ffffff;
 }
+#wrong{
+  border: 20px;
+  border-color: red;
+}
+#wrong{
+  border: 20px;
+  border-color: red;
+}
+#wrong{
+  border: 20px;
+  border-color: red;
+}
